<h5>2.4.0 Alpha-2   [NOT RELEASED]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.22, PHP 8.0.9, PHP 8.1.0 Beta 3
<hr>
- added sorting to Admin tables (mamba)
- added paging and filter to Admin tables (mamba)
- added Blocksadmin class (mamba)

<h5>2.4.0 Alpha-1   [2021-08-19]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.22, PHP 8.0.9, PHP 8.1.0 Beta 3
<hr>
- added several new Admin views and classes (mamba)
- more cleanup (mamba)

<h5>2.3 RC5   [2021-08-12]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.22, PHP 8.0.9, PHP 8.1.0 Beta 3
<hr>
- Nested 'dirname' (mamba)
- Min PHP 7.2 (mamba)
- Case mismatch in method call or class usage (mamba)
- Replace qualifier with an import (mamba)
- Short form of type keywords (mamba)
- Unnecessary double quotes (mamba)
- PhpDoc (mamba)
- Unnecessary type casting (mamba)
- Inverted 'if-else' constructs (mamba)
- Ternary operator simplified (mamba)
- Unnecessary boolean check (mamba)
- Low performing filesystem operations (mamba)
- Pass parameter by reference (mamba)
- Short list syntax (mamba)
- Unqualified function/constant reference (mamba)
- Insecure 'htmlspecialchars(...)' (mamba)
- UTF-8 (mamba)
- fixed Usid to uid in viewads.php (masel67)
- Fix bag for type and typeprice, text instead of numbers (masel67)
- Fix Desctext area in add.php (masel67)
- Update listing_report_abuse.tpl (masel67)
- Fix price view, and Undefined variable: xoopsModuleConfig in viewads.php  (masel67)
- added formatCurrencyTemp() function to format price (mamba)

<h5>2.3 RC4   [2021-08-12]</h5>  Dev: XOOPS 2.5.10, PHP 7.4.22, PHP 8.0.9
<hr>
- updates, fixes (mamba)
- fix for https://github.com/XoopsModules25x/adslight/issues/12 (cesagonchu/mamba)
- PHP8 Smarty defaults (mamba)
- rename ObjectTree (mamba)
- streamline namespaces (mamba)
- Cascading \dirname(...) calls (mamba)
- added Editor preferences (mamba)

<h5>2.3 RC3   [2019-04-22]</h5>  Dev: XOOPS 2.5.10, PHP 7.3.4
<hr>
- updates, fixes (mamba)


<h5>2.3 RC2   [2019-04-14]</h5>  Dev: XOOPS 2.5.10, PHP 7.3.4
<hr>