@@ -48,8 +48,8 @@ if (file_exists(XOOPS_ROOT_PATH . '/modules/adslight/sql/' . $xoopsConfig['langu
 }
 
 $modversion['version']             = '2.4';
-$modversion['module_status']       = 'Alpha 2 NOT RELEASED';
-$modversion['release_date']        = '2021/08/23';
+$modversion['module_status']       = 'Alpha 2';
+$modversion['release_date']        = '2021/08/30';
 $modversion['name']                = _MI_ADSLIGHT_NAME;
 $modversion['description']         = _MI_ADSLIGHT_DESC;
 $modversion['credits']             = 'AdsLight';
